# tas-kid-2020

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.py  htas.py
src/dll/: dllmain.c  hook.c  hook.h  main.c  main.h  offsets.c  offsets.h  tas.c  tas.h
src/loader/: kidloader.c
